--- a/style/index.css
+++ b/style/index.css
@@ -10,34 +10,23 @@
   width: 100%;
 }
 
-.cheong-machinery .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 1rem;
-  row-gap: 0.5rem;
-}
-
-.cheong-machinery .header .logo {
+.cheong-machinery .header-logo {
   width: 150px;
+  display: block;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
-.cheong-machinery .header .navbar {
+.cheong-machinery .navbar {
   background-color: #D61900;
   width: 100%;
   position: -webkit-sticky;
+  /* Safari */
   position: sticky;
   top: 0;
 }
 
-.cheong-machinery .header .navbar .container {
+.cheong-machinery .navbar .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,7 +38,7 @@
   padding: 0.5rem 0;
 }
 
-.cheong-machinery .header .navbar .container a {
+.cheong-machinery .navbar .container a {
   color: white;
   text-decoration: none;
   text-transform: capitalize;
@@ -61,17 +50,16 @@
 }
 
 .cheong-machinery .hero {
-  background-image: url("https://images.unsplash.com/photo-1504307651254-35680f356dfd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1176&q=80");
+  background-image: url("https://images.unsplash.com/photo-1623475030673-a4f228266a12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
   background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  padding: 6rem 0;
   background-size: cover;
-  background-position: bottom;
-  padding: 1rem 0;
-  width: 100%;
-  height: 70vh;
+  background-position: center;
 }
 
 .cheong-machinery .hero .container {
-  padding: 1rem;
   border-radius: 20px;
   width: 80%;
   margin-inline: auto;
@@ -87,17 +75,18 @@
       -ms-flex-align: center;
           align-items: center;
   row-gap: 0.5rem;
-  max-width: 400px;
+  max-width: 500px;
 }
 
 .cheong-machinery .hero .container .logo {
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
 }
 
 .cheong-machinery .hero .container p {
   text-align: center;
   font-weight: 500;
+  font-size: 0.8rem;
 }
 
 .cheong-machinery .services {
@@ -461,6 +450,9 @@
 @media only screen and (min-width: 700px) {
   .cheong-machinery .header .navbar .container a {
     font-size: 1.2rem;
+  }
+  .cheong-machinery .hero .container p {
+    font-size: 1.5rem;
   }
   .cheong-machinery .product-list {
     display: -webkit-box;
